--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,32 +17,32 @@
   <!-- Sidebar -->
   <div id="sidebar" class="closed">
     <h2>📐 General</h2>
-    <div class="endpoint" data-url="/math/bhaskara?a=1&b=-3&c=2">Bhaskara</div>
-    <div class="endpoint" data-url="/math/factorial?number=5">Factorial</div>
+    <div class="endpoint" data-url="/api/math/bhaskara?a=1&b=-3&c=2">Bhaskara</div>
+    <div class="endpoint" data-url="/api/math/factorial?number=5">Factorial</div>
 
     <h2>📏 Pythagoras</h2>
-    <div class="endpoint" data-url="/math/pythagoras/hypotenuse?leg1=3&leg2=4">Hypotenuse</div>
-    <div class="endpoint" data-url="/math/pythagoras/leg?hypotenuse=5&leg1=3">Leg</div>
+    <div class="endpoint" data-url="/api/math/pythagoras/hypotenuse?leg1=3&leg2=4">Hypotenuse</div>
+    <div class="endpoint" data-url="/api/math/pythagoras/leg?hypotenuse=5&leg1=3">Leg</div>
 
     <h2>🔵 Shapes</h2>
-    <div class="endpoint" data-url="/math/shapes/circle?radius=5">Circle Area</div>
-    <div class="endpoint" data-url="/math/shapes/circunference?radius=5">Circunference</div>
-    <div class="endpoint" data-url="/math/area/diamond?diagonal1=6&diagonal2=4">Diamond Area</div>
-    <div class="endpoint" data-url="/math/perimeter/diamond?side=4">Diamond Perimeter</div>
-    <div class="endpoint" data-url="/math/area/rectangle?length=5&width=3">Rectangle Area</div>
-    <div class="endpoint" data-url="/math/perimeter/rectangle?length=5&width=3">Rectangle Perimeter</div>
-    <div class="endpoint" data-url="/math/area/square?side=4">Square Area</div>
-    <div class="endpoint" data-url="/math/perimeter/square?side=4">Square Perimeter</div>
+    <div class="endpoint" data-url="/api/math/shapes/circle?radius=5">Circle Area</div>
+    <div class="endpoint" data-url="/api/math/shapes/circunference?radius=5">Circunference</div>
+    <div class="endpoint" data-url="/api/math/area/diamond?diagonal1=6&diagonal2=4">Diamond Area</div>
+    <div class="endpoint" data-url="/api/math/perimeter/diamond?side=4">Diamond Perimeter</div>
+    <div class="endpoint" data-url="/api/math/area/rectangle?length=5&width=3">Rectangle Area</div>
+    <div class="endpoint" data-url="/api/math/perimeter/rectangle?length=5&width=3">Rectangle Perimeter</div>
+    <div class="endpoint" data-url="/api/math/area/square?side=4">Square Area</div>
+    <div class="endpoint" data-url="/api/math/perimeter/square?side=4">Square Perimeter</div>
 
     <h2>🧊 Geometric Solids</h2>
-    <div class="endpoint" data-url="/math/volume/cube?side=3">Cube Volume</div>
-    <div class="endpoint" data-url="/math/surface/cube?side=3">Cube Surface</div>
-    <div class="endpoint" data-url="/math/volume/parallelepiped?length=5&width=3&height=2">Parallelepiped Volume</div>
-    <div class="endpoint" data-url="/math/surface/parallelepiped?length=5&width=3&height=2">Parallelepiped Surface</div>
-    <div class="endpoint" data-url="/math/volume/sphere?radius=4">Sphere Volume</div>
-    <div class="endpoint" data-url="/math/surface/sphere?radius=4">Sphere Surface</div>
-    <div class="endpoint" data-url="/math/volume/trapezoidalprism?a=5&b=3&h=4&length=6">Trapezoidal Prism Volume</div>
-    <div class="endpoint" data-url="/math/surface/trapezoidalprism?a=5&b=3&h=4&length=6">Trapezoidal Prism Surface</div>
+    <div class="endpoint" data-url="/api/math/volume/cube?side=3">Cube Volume</div>
+    <div class="endpoint" data-url="/api/math/surface/cube?side=3">Cube Surface</div>
+    <div class="endpoint" data-url="/api/math/volume/parallelepiped?length=5&width=3&height=2">Parallelepiped Volume</div>
+    <div class="endpoint" data-url="/api/math/surface/parallelepiped?length=5&width=3&height=2">Parallelepiped Surface</div>
+    <div class="endpoint" data-url="/api/math/volume/sphere?radius=4">Sphere Volume</div>
+    <div class="endpoint" data-url="/api/math/surface/sphere?radius=4">Sphere Surface</div>
+    <div class="endpoint" data-url="/api/math/volume/trapezoidalprism?a=5&b=3&h=4&length=6">Trapezoidal Prism Volume</div>
+    <div class="endpoint" data-url="/api/math/surface/trapezoidalprism?a=5&b=3&h=4&length=6">Trapezoidal Prism Surface</div>
   </div>
 
   <!-- Main -->
