Added Physic Button on Frontend

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 
-  <!-- Botão menu -->
-  <button id="menuBtn">☰ Menu</button>
+    <!-- Botão menu math -->
+  <button id="physicBtn">☰ Phycis Menu</button>
+
+  <!-- Botão menu math -->
+  <button id="mathBtn">☰ Math Menu</button>
 
   <!-- Overlay -->
   <div id="overlay"></div>
