--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -43,10 +43,10 @@
       display: block;
     }
 
-    /* Botão menu */
-    #menuBtn {
+    /* Botão menu math */
+    #physicBtn {
       position: fixed;
-      top: 15px;
+      bottom: 15px;
       right: 15px;
       z-index: 30;
       background: #ff914d;
@@ -58,7 +58,26 @@
       cursor: pointer;
       transition: background 0.2s;
     }
-    #menuBtn:hover {
+    #physicBtn:hover {
+      background: #ffb77a;
+    }
+
+    /* Botão menu math */
+    #mathBtn {
+      position: fixed;
+      bottom: 60px;
+      right: 15px;
+      z-index: 30;
+      background: #ff914d;
+      border: none;
+      color: #000;
+      padding: 10px 14px;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    #mathBtn:hover {
       background: #ffb77a;
     }
 
